--- a/Lab 1.9.css
+++ b/Lab 1.9.css
@@ -1,25 +1,18 @@
 body {
-    background-color: darkgray;
+    background-color: lightgray;
   }
   
-  h1 {
-    color: white;
-    font-family:Georgia, 'Times New Roman', Times, serif
+  h1, h2 {
+    color: darkgray;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+  }
+
+  h3{
+    color: black;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
 
   p {
     color: black;
-    font-family:'Courier New', Courier, monospace
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
   }
-
-  h2{
-    color: white;
-    font-family: Georgia, 'Times New Roman', Times, serif
-  }
-
-  h3{
-    color: white;
-    font-family: 'Courier New', Courier, monospace;
-  }
-
-  
