ready for marking

--- a/Lab 1.9.css
+++ b/Lab 1.9.css
@@ -1,3 +1,5 @@
+ /* I know it's very basic and boring, but it's a start! Once I play around with CSS a bit more I can add to this :) */ 
+
 body {
     background-color: lightgray;
   }
