--- a/Lab 2.3 Flexbox.css
+++ b/Lab 2.3 Flexbox.css
@@ -88,19 +88,26 @@ a {
 }
 
 .flex-menu {
-    display: flex;
-    flex-wrap: wrap;
     font-weight: bold;
-    justify-content: right; 
-    gap: 2px;
+    justify-content: center; 
     height: 40px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
+.flex-menu li {
+    flex-grow: 1;
+    text-align: center;
+    margin: 0 1px;
+}
+
+.flex-menu li a {     
+    color: black;
+    font-weight: bold;     
+}
+/* unable to centre the text  */
 .fourth-item {
     order: 5;
 }
 
-a {
-    text-decoration: none;
-    color: black;
-}
