--- a/Lab 2.4 BYO webpage.css
+++ b/Lab 2.4 BYO webpage.css
@@ -1,3 +1,11 @@
+@media only screen and (max-width: 600px) {
+    body {
+        background-color: lightgrey;
+        color: black;
+        text-align: left;
+        font-size: 11px;
+    }
+}
 body {
     font-family:'Courier New', Courier, monospace;
 }
@@ -63,10 +71,3 @@ footer {
     padding: 20px;
 }
 
-@media only screen and (max-width: 600px) {
-    body {
-        background-color: lightgrey;
-        color: black;
-        text-align: left;
-    }
-}
