--- a/Module4/Exercise 3 Calculator.css
+++ b/Module4/Exercise 3 Calculator.css
@@ -6,7 +6,8 @@ h1, p {
 
 footer {
     font-family: monospace;
-    text-align: right;
+    text-align: end;
+
 }
 
 input[type=button] {
@@ -29,6 +30,8 @@ button {
     background-color: white;
     border-radius: 8px;
     border: solid;
+    width: 50px;
+    height: 50px;
 }  
 
 button:active {
