--- a/Module4/Exercise 3 Calculator.css
+++ b/Module4/Exercise 3 Calculator.css
@@ -39,6 +39,16 @@ button:active {
     color: white;
 }
 
+#result {
+    font-family: monospace;
+    font-size: 75px;
+    align-items: center;
+    border: 0px;
+    padding: 25px;
+    text-align: center;
+    color: darkgrey;
+
+}
 input[type="text"] {
     font-family: monospace;
     font-size: 54px;
@@ -47,13 +57,6 @@ input[type="text"] {
     height: 200px;
     width: 200px;
     text-align: center;
-}
-
-input[type="reset"] {
-    font-family: monospace;
-    font-size: 24px;
-    background-color: white;
-    border-radius: 8px;
 }
 
 .flex-container {
