--- a/Mini-Project-1/Mini-Project-1-style.css
+++ b/Mini-Project-1/Mini-Project-1-style.css
@@ -93,9 +93,24 @@ footer {
     margin-top: 15px;
 }
 
-form {
-    margin-left: 25%;
+input[type=text], select, textarea {
+    width: 50%;
+    align-items: center;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 30px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+  }
+  
+input[type=submit] {
+    background-color: grey;
+    color: white;
+    border-radius: 30px;
+    cursor: pointer;
+    font-size: 20px;
     padding: 15px;
-    border-radius: 50px;
-    
+    border: thin;
 }
