--- a/Mini-Project-1/Mini-Project-1-style.css
+++ b/Mini-Project-1/Mini-Project-1-style.css
@@ -59,14 +59,16 @@ a {
     text-decoration: none;
 }
 
-.button {
+button {
     background-color: grey;
-    color: white;
+    color: black;
     border-radius: 30px;
     cursor: pointer;
     font-size: 20px;
     padding: 15px;
-    border: thin;
+    border: thin; 
+    margin-left: 25%;
+    font-weight: bold;
 }
 
 .topnav {
@@ -80,25 +82,10 @@ footer {
     text-align: end;
 }
 
-input[type=text], select, textarea {
-    width: 50%;
-    align-items: center;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 30px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    margin-left: 25%;
-    resize: vertical;
-  }
-  
-input[type=submit] {
-    background-color: grey;
-    color: white;
-    border-radius: 30px;
-    cursor: pointer;
-    font-size: 20px;
-    padding: 15px;
-    border: thin;
+div {
+    text-align: left;
+    margin-left: 40%;
+    font-size: 22px;
+    color: grey;
+
 }
