--- a/Mini-Project-1/Mini-Project-1-style.css
+++ b/Mini-Project-1/Mini-Project-1-style.css
@@ -68,7 +68,6 @@ button {
     padding: 15px;
     border: thin; 
     margin-left: 25%;
-    font-weight: bold;
 }
 
 .topnav {
@@ -81,3 +80,36 @@ footer {
     font-size: smaller;
     text-align: end;
 }
+
+.search-input {
+    width: 300px;
+    height: 50px;
+    padding: 5px;
+    border-radius: 30px;
+    border-color: grey;
+    margin-left: 40%;
+  }
+
+.search-button {
+    height: 50px;
+    width: 100px;
+    padding: 5px;
+    margin-left: 10px;
+    color: black;
+    font-weight: bold;
+  }  
+
+.load-more {
+    display: flex;
+    height: 50px;
+    width: 150px;
+    padding: 5px;
+    margin-left: 10px;
+    color: black;
+    margin-left: 45%;
+    justify-content: center;
+    background-color: grey;
+    border-radius: 30px;
+    font-size: 20px;
+    align-items: center;
+  }  
