--- a/Module6/vite-project/src/App.css
+++ b/Module6/vite-project/src/App.css
@@ -40,3 +40,11 @@
 .read-the-docs {
   color: #888;
 }
+
+.componentBox { 
+  border: 1px solid #aaa; 
+  margin: 1em;
+  padding: 1em; 
+  text-align: center; 
+  background: #efefef;
+ }
